Bug 507122 - "Show all split details in ledger" setting is handled incorrectly
Summary: "Show all split details in ledger" setting is handled incorrectly
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on: 419570
Blocks:
  Show dependency treegraph
 
Reported: 2025-07-16 16:36 UTC by crushedtortilla
Modified: 2025-07-23 14:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
Difference of show all split details being off or on (53.15 KB, image/png)
2025-07-18 07:17 UTC, Thomas Baumgart
Details
"show all split details" on/off on debian bookworm (152.77 KB, image/png)
2025-07-18 09:50 UTC, surcouf
Details
split details on crushedtortilla machine (archlinux) (17.44 KB, image/png)
2025-07-20 04:28 UTC, crushedtortilla
Details

Note You need to log in before you can comment on or make changes to this bug.
Description crushedtortilla 2025-07-16 16:36:28 UTC
SUMMARY
Upon upgrading to 5.2.0, I noticed that the Settings > Ledger > "Show all split details in ledger" option no longer works as expected. 

STEPS TO REPRODUCE
1. Toggle the Settings > Ledger > "Show all split details in ledger" option and apply the change, while looking at a ledger with splits in it.

OBSERVED RESULT
When it is unselected, all the split details show in the Detail cell in the Ledger.

When it is selected, the Detail cell is empty.

EXPECTED RESULT
When it is unselected, the Detail cell should show something like "Split Transaction" (I believe prior versions did this, but I don't recall the specific words).

When it is selected, the Detail cell should show all the accounts for the split.


SOFTWARE/OS VERSIONS
KMyMoney 5.2.0
Comment 1 surcouf 2025-07-17 10:40:21 UTC
Hello,

> EXPECTED RESULT
>When it is unselected, the Detail cell should show something like "Split Transaction" (I believe prior versions did this, but I don't recall the specific words).

If i am not wrong, your expected result is the normal behavior for version 5.1.3
Your observed result is not a bug, but an implemented wish which has been released in 5.2.0, see release notes here : https://kmymoney.org/2025/06/21/kmymoney-5-2-0-released.html
And specifically this bug/wish: 419570 Provide split category detail instead of fixed text 'Split transaction', see link https://bugs.kde.org/show_bug.cgi?id=419570

if you read this, you may want to close this bug as "resolved" -> "not a bug".
Comment 2 crushedtortilla 2025-07-17 17:24:50 UTC
Hi,

Thanks for the reply! Thanks for pointing out bug 419570, that explains the new functionality.

However, I think there is a problem with it. When the "Show all split details in ledger" option is unselected, I see all the split details. When the option is selected, the details line in the ledger is empty. That seems backwards. So I think that should be reversed so that the setting does not do the opposite of what it says. Perhaps there's some specific conditional that is triggering this in my case; it seems unlikely this would not have been caught earlier when the feature was first implemented.

And then I also think that when choosing not to show all split details in the ledger, it should still say "Split transaction" instead of a empty cell; that just seems a little nicer.
Comment 3 Thomas Baumgart 2025-07-18 07:17:19 UTC
Created attachment 183316 [details]
Difference of show all split details being off or on

I think there is some misunderstanding here. The option controls if the categories of the splits are shown in a single line separated by commas (off) or each split on a separate line with full category and amount in the deposit or payment column (on).

Reading the comments, I figure out setting off is working as expected by setting on seems not to be functioning as wanted. Is it another Qt6 related issue (I took the screenshots on Qt5) or something else?
Comment 4 surcouf 2025-07-18 09:50:05 UTC
Created attachment 183318 [details]
"show all split details" on/off on debian bookworm

(In reply to Thomas Baumgart from comment #3)
> Created attachment 183316 [details]
> Difference of show all split details being off or on: 
> The option controls if the categories of the splits are shown 
> > in a single line separated by commas (off) 
> > or each split on a separate line with full category and amount in the deposit or payment column (on).
thank for this explanation. 
How could it be added to the user manual here https://docs.kde.org/stable5/en/kmymoney/kmymoney/details.settings.register.html?
> Reading the comments, I figure out setting off is working as expected by setting on seems not to be functioning as wanted. Is it another Qt6 related issue (I took the screenshots on Qt5) or something else?

Fun fact, on my computer, the option "show all split details" works as per your description above :), see attachment.
i am not sure how to check the Qt5 topic. Is it dependent on my computer? 
I use kmymoney 5.2.0-2cbd7a8, there the "about" section mentions "Qt Version 5.15.13 (Compilé avec 5.15.12)"
my operation system is Debian 12 bookworm.
Comment 5 crushedtortilla 2025-07-20 04:28:51 UTC
Created attachment 183367 [details]
split details on crushedtortilla machine (archlinux)

Oh, that is very weird. I don't see anything like that, but I have attached a screenshot of what I see. And yes, I have annotated it correctly :)
Comment 6 Thomas Baumgart 2025-07-21 09:02:09 UTC
With your current settnigs, KMyMoney seems to fill the memo in detail column (which you may heft left empty). Please try to turn on the "Use the ledger lens" setting to see if this gets what you are looking for and report back.
Comment 7 crushedtortilla 2025-07-22 06:17:57 UTC
Hmm, I don't think it does really.

For the following, I have "Show all ledger entries in full detail" disabled, so these results are for the selected ledger entry.

* "Use the ledger lens" is enabled, "Show all split details in ledger" is enabled: I see a blank first line in the details cell, and then the smaller and italicized split details on separate lines.
* "Use the ledger lens" is disabled, "Show all split details in ledger" is enabled: I only see a blank line in the details cell.
* "Use the ledger lens" is enabled, "Show all split details in ledger" is disabled: I see all the split categories comma-separated in the details cell.
* "Use the ledger lens" is disabled, "Show all split details in ledger" is disabled: I see all the split categories comma-separated in the details cell.

So "Use the ledger lens" doesn't seem to do anything when "Show all split details in ledger" is disabled. I don't know if that is intended.

It doesn't seem like anything is modifying the memo field; when I edit the ledger entry the memo field is blank in all these cases.
Comment 8 Thomas Baumgart 2025-07-22 07:29:33 UTC
> So "Use the ledger lens" doesn't seem to do anything when
> "Show all split details in ledger" is disabled. I don't know if that is intended.
Yes, this is intended.

> It doesn't seem like anything is modifying the memo field; when I edit
> the ledger entry the memo field is blank in all these cases.
Yes, the memo field is either filled by importing transactions (if available) or manually by the user.

The combination "Use the ledger lens" is disabled, "Show all split details in ledger" should probably act the same way as "Use the ledger lens" is disabled, "Show all split details in ledger", because the memo should not take precedence over the category.
Comment 9 Thomas Baumgart 2025-07-22 09:41:28 UTC
Git commit 40cbbdfae47cbcd84765247001af40a1eb796d5c by Thomas Baumgart.
Committed on 22/07/2025 at 09:41.
Pushed by tbaumgart into branch 'master'.

Fix precedence of ledger detail
FIXED-IN: 5.2.1

M  +19   -0    kmymoney/dialogs/settings/ksettingsregister.ui
M  +4    -6    kmymoney/views/journaldelegate.cpp
M  +1    -1    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/40cbbdfae47cbcd84765247001af40a1eb796d5c
Comment 10 Thomas Baumgart 2025-07-23 14:24:32 UTC
Git commit bc52bace7080353bfc4b9712ce41f3344bbe16c8 by Thomas Baumgart.
Committed on 23/07/2025 at 12:38.
Pushed by tbaumgart into branch '5.2'.

Fix precedence of ledger detail
FIXED-IN: 5.2.1
(cherry picked from commit 40cbbdfae47cbcd84765247001af40a1eb796d5c)

M  +19   -0    kmymoney/dialogs/settings/ksettingsregister.ui
M  +4    -6    kmymoney/views/journaldelegate.cpp
M  +1    -1    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/bc52bace7080353bfc4b9712ce41f3344bbe16c8