Fix precedence of ledger detail

BUG: 507122
FIXED-IN: 5.2.1
(cherry picked from commit 40cbbdfae47cbcd84765247001af40a1eb796d5c)